# chess-zero

./: .gitignore  pyproject.toml
chesszero/: anchor.py  bridge.py  buffer.py  config.py  engine.py  evaluate.py  net.py  resign.py  selfplay.py  train.py
configs/: tiny.yaml  v1.yaml  v2-smoke.yaml  v2.yaml
models/: README.md
models/best-gen1709/: _CHECKPOINT_METADATA  manifest.ocdbt
models/best-gen1739/: _CHECKPOINT_METADATA  manifest.ocdbt
models/best-gen1769/: _CHECKPOINT_METADATA  manifest.ocdbt
models/best-gen1829/: _CHECKPOINT_METADATA  manifest.ocdbt
models/best-gen1859/: _CHECKPOINT_METADATA  manifest.ocdbt
models/best-gen1889/: _CHECKPOINT_METADATA  manifest.ocdbt
models/best-gen1979/: _CHECKPOINT_METADATA  manifest.ocdbt
models/best-gen2129/: _CHECKPOINT_METADATA  manifest.ocdbt
models/best-gen2159/: _CHECKPOINT_METADATA  manifest.ocdbt
models/best-gen2189/: _CHECKPOINT_METADATA  manifest.ocdbt
models/best-gen2369/: _CHECKPOINT_METADATA  manifest.ocdbt
models/best-gen2459/: _CHECKPOINT_METADATA  manifest.ocdbt
models/best-gen2519/: _CHECKPOINT_METADATA  manifest.ocdbt
models/best-gen2549/: _CHECKPOINT_METADATA  manifest.ocdbt
models/best-gen2609/: _CHECKPOINT_METADATA  manifest.ocdbt
models/best-gen3029/: _METADATA  (+2 more)
scripts/: bootstrap.sh  calibrate.py  engine_move.py  smoke.sh  status.py  versus_stockfish.py
tests/: test_anchor.py  test_bridge.py  test_buffer.py  test_config.py  test_engine.py  test_gating.py  test_net.py  test_resign.py  test_selfplay_device.py  test_selfplay_worker.py  test_train_step.py  test_trainer.py
(+112 files in other folders)
